# django-clickify

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
clickify/: admin.py  apps.py  drf_urls.py  drf_views.py  middleware.py  models.py  urls.py  utils.py  views.py
clickify/migrations/: 0001_initial.py
clickify/templatetags/: clickify_tags.py
tests/: settings.py  test_clickify.py  test_drf_views.py  test_middleware.py  test_models.py  test_templatetags.py  test_utils.py  test_views.py  urls.py
